tests/errors/semantic/blocking/DISCARD_SET_INCOMPATIBLE_TYPES_2.py
# Expecting an argument of the same type as the elements of the set
# pylint: disable=missing-function-docstring, missing-module-docstring

a = {5.3, 9.2, 1.7}
b = 3
a.discard(b)
